<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="connect">Connetti...</string>
    <string name="disconnect">Disconnetti...</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_location">Location</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Aggiungi scheda</string>

    <string name="menu_export_db">Export DB</string>
    <string name="menu_import_db">Import DB</string>

    <string name="menu_save">Salva</string>
    <string name="menu_delete">Cancella</string>

    <string name="card_name">Nome</string>
    <string name="card_uid">Uid</string>
    <string name="card_password">Password</string>
    <string name="card_timeout">Temporizzatore</string>
    <string name="card_note">Note</string>

    <string name="card_generali">Generali</string>
    <string name="card_rele">Rinomina Relè</string>
    <string name="card_rele_1">Relè 1</string>
    <string name="card_rele_2">Relè 2</string>
    <string name="card_rele_3">Relè 3</string>
    <string name="card_rele_4">Relè 4</string>
    <string name="card_rele_5">Relè 5</string>
    <string name="card_rele_6">Relè 6</string>
    <string name="card_rele_7">Relè 7</string>
    <string name="card_rele_8">Relè 8</string>
    <string name="card_rele_9">Relè 9</string>
    <string name="card_rele_10">Relè 10</string>
    <string name="card_rele_11">Relè 11</string>
    <string name="card_rele_12">Relè 12</string>
    <string name="card_rele_13">Relè 13</string>
    <string name="card_rele_14">Relè 14</string>
    <string name="card_rele_15">Relè 15</string>
    <string name="card_rele_16">Relè 16</string>

    <string name="action_all_open">Apri tutti</string>
    <string name="action_all_close">Chiudi tutti</string>

    <string name="action_settings">Impostazioni</string>
    <string name="disconnected">disconnected</string>

    <string name="title_activity_tabbed">Tabbed</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>