<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <PreferenceCategory
        android:layout_width="match_parent"
        android:key="@string/card_generali"
        android:title="@string/card_generali">
        <EditTextPreference
            android:key="@string/card_name"
            android:title="@string/card_name"></EditTextPreference>
        <EditTextPreference
            android:key="@string/card_uid"
            android:title="@string/card_uid"></EditTextPreference>
        <EditTextPreference
            android:key="@string/card_password"
            android:password="true"
            android:title="@string/card_password"></EditTextPreference>
        <EditTextPreference
            android:inputType="number"
            android:key="@string/card_timeout"
            android:title="@string/card_timeout"></EditTextPreference>
        <EditTextPreference
            android:key="@string/card_note"
            android:title="@string/card_note"></EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/card_rele"
        android:title="@string/card_rele"
        android:layout_width="match_parent">
        <EditTextPreference
            android:key="@string/card_rele_1"
            android:title="@string/card_rele_1">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_2"
            android:title="@string/card_rele_2">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_3"
            android:title="@string/card_rele_3">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_4"
            android:title="@string/card_rele_4">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_5"
            android:title="@string/card_rele_5">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_6"
            android:title="@string/card_rele_6">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_7"
            android:title="@string/card_rele_7">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_8"
            android:title="@string/card_rele_8">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_9"
            android:title="@string/card_rele_9">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_10"
            android:title="@string/card_rele_10">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_11"
            android:title="@string/card_rele_11">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_12"
            android:title="@string/card_rele_12">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_13"
            android:title="@string/card_rele_13">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_14"
            android:title="@string/card_rele_14">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_15"
            android:title="@string/card_rele_15">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/card_rele_16"
            android:title="@string/card_rele_16">
        </EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>